--- a/app/views/noticeofchange/solicitor/addenterdetails.html
+++ b/app/views/noticeofchange/solicitor/addenterdetails.html
@@ -41,7 +41,7 @@ Case details
                                 <div class="govuk-error-summary__body">
                                     <ul class="govuk-list govuk-error-summary__list">
                                         <li>
-                                            <a href="#casenumber">Enter an online case reference in the correct format</a>
+                                            <a href="#casenumber">Enter a valid online case reference</a>
                                         </li>
                                     </ul>
                                 </div>
