update to NOC in progress error page

--- a/app/views/noticeofchange/solicitor/errornocinprogress.html
+++ b/app/views/noticeofchange/solicitor/errornocinprogress.html
@@ -14,9 +14,9 @@ Case details
             <div class="govuk-grid-column-two-thirds">
                 <h1 class="govuk-heading-l" id="cookies">Something went wrong</h1>
                 <p class="govuk-body">Your notice of change request has not been submitted.</p>
-                <p class="govuk-body">A notice of change has already been submitted for this case.</p>
-                <p class="govuk-body">Try again in 3 days.</p>
-                <p class="govuk-body"><a href="contactus">Contact us</a>  if you’re still having problems.</p>
+                <p class="govuk-body">A notice of change is already in progress for this case.</p>
+                <!-- <p class="govuk-body">Try again in 3 days.</p>  -->
+                <p class="govuk-body"><a href="contactus">Contact us</a> for more information.</p>
         </div>
     </div>
 
