UPdates from stakeholder meeting and content from dan

--- a/app/views/noticeofchange/layoutdemo.html
+++ b/app/views/noticeofchange/layoutdemo.html
@@ -107,7 +107,7 @@
                 active: pageId == '#'
                 },
                 {
-                text: 'Acquire case file',
+                text: 'Notice of change',
                 href: getUrl('/startnoc'),
                 active: pageId == '#'
                 }
