--- a/app/views/noticeofchange/solicitor/addenterdetails.html
+++ b/app/views/noticeofchange/solicitor/addenterdetails.html
@@ -68,15 +68,15 @@ Case details
 
                         <div class="hmcts-page-heading">
                               <div class="hmcts-page-heading__title">
-                                   <h1 class="govuk-heading-l">Notice of change or notice of acting</h1>
+                                   <h1 class="govuk-heading-l">Notice of change</h1>
                               </div>
                         </div>
 
 
-                        <p>You can use this notice of change or notice of acting to tell the court that:</p>
+                        <p>You can use this notice of change (sometimes called a ‘notice of acting’) to acquire the case file from:</p>
                         <ul class="govuk-list govuk-list--bullet">
-                            <li>the legal representative in this case has changed</li>
-                            <li>a client has instructed a legal representative to act on their behalf</li>
+                            <li>a client acting in person</li>
+                            <li>a solicitor previously acting on your client’s behalf</li>
                         </ul>
 
 
