--- a/app/views/noticeofchange/solicitor/confirmationofstopping.html
+++ b/app/views/noticeofchange/solicitor/confirmationofstopping.html
@@ -23,7 +23,7 @@ Case details
                         If you don’t represent another party in this case, it will be removed from your case list.</p>
 
                     <h2 class="govuk-heading-m ">What happens next</h2>
-                    <p>We’ll send the case file to this client in the post.</p>
+                    <p>You’ll need to give the paper case file back to your former client.</p>
 
                     <p class="govuk-body">
                         <a href="caselist">View case list</a>
