--- a/app/views/noticeofchange/solicitor/stopsot.html
+++ b/app/views/noticeofchange/solicitor/stopsot.html
@@ -9,10 +9,11 @@ Case details
 
     <div class="hmcts-page-heading">
           <div class="hmcts-page-heading__title">
-               <h1 class="govuk-heading-l">Handing the case over to the client</h1>
+               <h1 class="govuk-heading-l">Confirm details</h1>
           </div>
     </div>
 
+    <!--
     <div class="govuk-form-group ">
         <h2 class="govuk-heading-s">
             Client details
@@ -27,7 +28,7 @@ Case details
             SS17 7HT<br>
         </p>
     </div>
-
+    -->
 
     <form
         name="aspnetForm"
