NOC updates to content

--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -188,7 +188,7 @@ Case details
 
 
                     <div class="govuk-inset-text">
-                        This can take up to a minute.
+                        After you submit a notice of change, you might have to wait a few seconds before you receive confirmation.
                     </div>
 
                     <input type="hidden" name="answers-checked" value="true">
