--- a/app/views/searchorgs/layoutdemo.html
+++ b/app/views/searchorgs/layoutdemo.html
@@ -163,9 +163,10 @@ Apply for a divorce
   {% endblock %}
 
 
-  {% block bodyEnd %}
-    {% block scripts %}
-      {% include "./scripts.html" %}
-      {% block pageScripts %}{% endblock %}
-    {% endblock %}
-  {% endblock %}
+{% block bodyEnd %}
+{% block scripts %}
+{% include "includes/scripts.html" %}
+{% block pageScripts %}{% endblock %}
+{% endblock %}
+<!-- GOV.UK Prototype Kit {{releaseVersion}} -->
+{% endblock %}
