--- a/app/views/noticeofchange/solicitor/emailgoingoffrecordaccepted.html
+++ b/app/views/noticeofchange/solicitor/emailgoingoffrecordaccepted.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>You are registering for the Gender pay gap reporting service</title></head>
+<head><title></title></head>
 
 <body style="background-color:#dee0e2;margin:0;padding:0">
 <style type="text/css">
@@ -67,7 +67,7 @@
                         <td style="font-family:Helvetica,Arial,sans-serif;padding:25px 20px 20px">
 
                             <p style="margin:0 0 30px;font-size:19px">Dear Sir/Madam,</p>
-                            <p style="margin:0 0 30px;font-size:19px">We have reviewed and accepted your notice of change request to stop representing Neil Higham.</p>
+                            <p style="margin:0 0 30px;font-size:19px">We have reviewed and accepted your notice of change request to stop representing a client.</p>
                             <p style="margin:30px 0 30px;font-size:19px">You have been removed from case 1593-0136-4696-9976 and no longer have access to it.</p>
                             <p style="margin:30px 0 30px;font-size:19px">If you don’t represent another party in this case, it will be removed from your case list.</p>
                             <p style="margin:30px 0 30px;font-size:19px">HM Courts & Tribunals Service</p>
