--- a/app/views/noticeofchange/solicitor/emailgoingoffrecordrejected.html
+++ b/app/views/noticeofchange/solicitor/emailgoingoffrecordrejected.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>You are registering for the Gender pay gap reporting service</title></head>
+<head><title></title></head>
 
 <body style="background-color:#dee0e2;margin:0;padding:0">
 <style type="text/css">
