--- a/app/views/noticeofchange/solicitor/emailgoingonrecordaccepted.html
+++ b/app/views/noticeofchange/solicitor/emailgoingonrecordaccepted.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>You are registering for the Gender pay gap reporting service</title></head>
+<head><title></title></head>
 
 <body style="background-color:#dee0e2;margin:0;padding:0">
 <style type="text/css">
@@ -67,7 +67,7 @@
                         <td style="font-family:Helvetica,Arial,sans-serif;padding:25px 20px 20px">
 
                             <p style="margin:0 0 30px;font-size:19px">Dear Sir/Madam,</p>
-                            <p style="margin:0 0 30px;font-size:19px">We have reviewed and accepted your notice of change request to acquire the case file for Jo Bloggs.</p>
+                            <p style="margin:0 0 30px;font-size:19px">We have reviewed and accepted your notice of change request to acquire the case file a client.</p>
 
                             <p style="margin:30px 0 30px;font-size:19px">You can now access case 1593-0136-4696-9976 from your MyHMCTS case list.</p>
 
