--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -183,8 +183,7 @@ Case details
 
                     <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Notifications</h2>
 
-                    <p class="govuk-body  govuk-!-margin-bottom-7">Once we’ve approved this notice of change, we’ll let the previous
-                        legal firm or solicitor know that they’re no longer representing this client.</p>
+                    <p class="govuk-body  govuk-!-margin-bottom-7">If the client had legal representation we’ll let the previous legal firm or solicitor know that they’re no longer representing this client.</p>
 
 
                     <div class="govuk-inset-text">
