--- a/app/views/searchorgs/search/divorce2.html
+++ b/app/views/searchorgs/search/divorce2.html
@@ -5,7 +5,6 @@ Divorce
 {% endblock %}
 
 
-
 {% block content %}
 
 <div style="width:960px; display: flex; margin: 0 auto;">
@@ -484,6 +483,7 @@ Divorce
                                                 </div>
                                             </div>
 
+
                                         </div>
 
                                     </div>
@@ -510,10 +510,10 @@ Divorce
             </button>
         </form>
 
-
     </div>
 
 </div>
+
 
 
 
@@ -617,7 +617,8 @@ Divorce
 
 
 
-    function showselectedresult(itemnumber) {
+    function showselectedresult(itemnumber)
+    {
         var prefixaddresscontainer = 'testesult';
         var buttonname = 'selectbutton';
         var datacountplusone = 18;
@@ -644,7 +645,5 @@ Divorce
 
 
 </script>
-
-
 
 {% endblock %}
