updated text for NoC being reviewed

--- a/app/views/noticeofchange/solicitor/confirmation.html
+++ b/app/views/noticeofchange/solicitor/confirmation.html
@@ -108,11 +108,11 @@ Case details
                         {% if data.inreview == 'true' %}
                             <h2 class="govuk-heading-m  govuk-!-margin-top-6">What happens next</h2>
                             <p>We’re reviewing your request.</p>
-                            <p>We’ll send you an email confirming our decision.</p>
-                            <p>If your request is accepted, the case will appear in your case list.</p>
-                            <p class="govuk-body">
+                            <p>We’ll send you confirmation of our decision.</p>
+                            <p>Once this notice of change has been approved, the case will be assigned to your organisation. The Case Access Administrator (CAA) will then be able to give you access.</p>
+                          <!--  <p class="govuk-body">
                                 <a href="caselist">View case list</a>
-                            </p>
+                            </p> -->
                         {% else %}
                             <p>This notice of change request has been rejected.</p>
                             <p>To continue <a href="contactus">contact HMCTS</a>.</p>
