--- a/app/views/noticeofchange/solicitor/errortryoffline.html
+++ b/app/views/noticeofchange/solicitor/errortryoffline.html
@@ -15,7 +15,7 @@ Case details
                 <h1 class="govuk-heading-l" id="cookies">Something went wrong</h1>
                 <p class="govuk-body">Your notice of change request has not been submitted.</p>
 
-                <p>You'll need to submit a notice of change on paper.</p>
+                <p>You’ll need to submit a notice of change offline. You can do this by filling in the relevant paper form.</p>
 
                 <p><span class="govuk-!-font-weight-bold">Civil cases</span><br>
                     Use <a href="https://www.gov.uk/government/publications/form-n434-notice-of-change-of-solicitor">form N434</a> (opens in new window)</p>
@@ -24,7 +24,7 @@ Case details
                     Use <a href="https://www.gov.uk/government/publications/form-fp8-notice-of-change-of-solicitor">form FP8</a> (opens in new window)</p>
 
                 <p><span class="govuk-!-font-weight-bold">Tribunal cases</span><br>
-                    Write a letter confirmation of the change of representation.   Include the 16 digit case reference.</p>
+                    Write a letter confirming the change of legal representative. You should include the 16-digit case reference. Send a copy to all parties involved in the case, including the court.</p>
 
 
         </div>
