final error update content

--- a/app/views/noticeofchange/solicitor/errortryoffline.html
+++ b/app/views/noticeofchange/solicitor/errortryoffline.html
@@ -17,7 +17,7 @@ Case details
 
                 <p>You’ll need to submit a notice of change offline. You can do this by filling in the relevant paper form.</p>
 
-                <p>You should send the form to the court dealing with the case.
+                <p>You should send the form to the court or tribunal dealing with the case.
                     <a href="https://www.gov.uk/find-court-tribunal">Find the right court or tribunal</a>.</p>
 
                 <p><span class="govuk-!-font-weight-bold">Civil cases</span><br>
