--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -21,7 +21,7 @@ Case details
                         <div class="govuk-error-summary__body">
                             <ul class="govuk-list govuk-error-summary__list">
                                 <li>
-                                    <a href="#sotruth">You must confirm the statement of truth</a>
+                                    <a href="#sotruth">You must confirm the information you've provided</a>
                                 </li>
                             </ul>
                         </div>
@@ -165,7 +165,7 @@ Case details
                             <p>When you’re satisfied that all the information is accurate, you should tick to “sign”.</p>
                             {% if data.errorsot == 'true'%}
                                 <span id="national-insurance-number-error" class="govuk-error-message">
-                                      <span class="govuk-visually-hidden">Error:</span> Tick the box to sign the statement of truth
+                                      <span class="govuk-visually-hidden">Error:</span> Tick the box to confirm the details are accurate
                                 </span>
                             {% endif %}
                             <div class="govuk-checkboxes">
