--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -37,7 +37,7 @@ Case details
                             Change request
                         </dt>
                         <dd class="govuk-summary-list__value">
-                            Acquire case file (notice of change)
+                          Notice of change
                         </dd>
                         <dd class="govuk-summary-list__actions">
                         </dd>
