half way through filtering

--- a/app/views/caa/cases/unassignedcases.html
+++ b/app/views/caa/cases/unassignedcases.html
@@ -27,7 +27,7 @@ Divorce
                         <div  class=" govuk-!-margin-bottom-6">
                             <p><span style="font-weight: 700">Showing</span>
                                 <br>Divorce, Contested Financial Remedy, Consented Financial Remedy<br>
-                                <a href="##">Change</a></p>
+                                <a href="showhideunassignedcases">Change</a></p>
                         </div>
 
 
@@ -44,8 +44,9 @@ Divorce
                                             </label>
                                         </div>-->
                                     </th>
-                                    <th class="govuk-table__header" scope="col" style="width:200px;">Sender's notes<br></th>
+                                    <th class="govuk-table__header" scope="col" style="width:200px;">Solicitor's notes<br></th>
                                     <th class="govuk-table__header" scope="col" style="width:200px;">Case type<br></th>
+                                    <th class="govuk-table__header" scope="col" style="width:200px;">Solicitor's firm<br></th>
                                     <th class="govuk-table__header" scope="col">Case name<br></th>
                                     <th class="govuk-table__header" scope="col" style="width:110px;">Date sent</th>
                                     <th class="govuk-table__header" scope="col" style="width:110px;">Deadline</th>
@@ -62,6 +63,7 @@ Divorce
                                     </th>
                                     <td class="govuk-table__cell ">Michele Serrano EB-345-2020</td>
                                     <td class="govuk-table__cell ">Divorce</td>
+                                    <td class="govuk-table__cell ">Clarke Willmott</td>
                                     <td class="govuk-table__cell ">Anne Smith vs Hugh fearnley Smith</td>
                                     <td class="govuk-table__cell ">27 Oct 20<br>(3 days ago)</td>
                                     <td class="govuk-table__cell ">3 Nov 20<br>(4 days left)</td>
@@ -76,6 +78,7 @@ Divorce
                                     </th>
                                     <td class="govuk-table__cell ">Michele Serrano<br>FR-347-2020</td>
                                     <td class="govuk-table__cell ">Contested Financial Remedy</td>
+                                    <td class="govuk-table__cell ">Clarke Willmott</td>
                                     <td class="govuk-table__cell ">Anne Smith vs Hugh fearnley Smith</td>
                                     <td class="govuk-table__cell ">27 Oct 20<br>(3 days ago)</td>
                                     <td class="govuk-table__cell "></td>
@@ -90,6 +93,7 @@ Divorce
                                     </th>
                                     <td class="govuk-table__cell ">Pietro Jones</td>
                                     <td class="govuk-table__cell ">Contested Financial Remedy</td>
+                                    <td class="govuk-table__cell ">Michelmores</td>
                                     <td class="govuk-table__cell ">Hemesh Patel vs Laura Patel</td>
                                     <td class="govuk-table__cell ">29 Oct 20<br>(1 day ago)</td>
                                     <td class="govuk-table__cell "></td>
