--- a/app/views/caa/cases/unassignedcases.html
+++ b/app/views/caa/cases/unassignedcases.html
@@ -25,9 +25,11 @@ Divorce
                         </legend>
 
                         <div  class=" govuk-!-margin-bottom-6">
-                            <p><span style="font-weight: 700">Showing</span>
-                                <br>Divorce, Contested Financial Remedy, Consented Financial Remedy<br>
-                                <a href="showhideunassignedcases">Change</a></p>
+                            <p><span style="font-weight: 700">Case types: </span>&nbsp;
+                                <span style="border:1px solid #0b0c0c; font-size: 16px;">&nbsp;Divorce&nbsp;&nbsp;</span>&nbsp;
+                                <span style="border:1px solid #0b0c0c; font-size: 16px;">&nbsp;Contested Financial Remedy&nbsp;&nbsp;</span>&nbsp;
+                                <span style="border:1px solid #0b0c0c; font-size: 16px;">&nbsp;Consented Financial Remedy&nbsp;&nbsp;</span>&nbsp;
+                                <br><a href="showhideunassignedcases">Change</a></p>
                         </div>
 
 
@@ -44,12 +46,12 @@ Divorce
                                             </label>
                                         </div>-->
                                     </th>
-                                    <th class="govuk-table__header" scope="col" style="width:200px;">Solicitor's notes<br></th>
-                                    <th class="govuk-table__header" scope="col" style="width:200px;">Case type<br></th>
-                                    <th class="govuk-table__header" scope="col" style="width:200px;">Solicitor's firm<br></th>
-                                    <th class="govuk-table__header" scope="col">Case name<br></th>
-                                    <th class="govuk-table__header" scope="col" style="width:110px;">Date sent</th>
-                                    <th class="govuk-table__header" scope="col" style="width:110px;">Deadline</th>
+                                    <th class="govuk-table__header" scope="col" style="width:200px;">Solicitor's notes &#x2195;</th>
+                                    <th class="govuk-table__header" scope="col" style="width:200px;">Case type &#x2195;</th>
+                                    <th class="govuk-table__header" scope="col" style="width:200px;">Solicitor's firm &#x2195;</th>
+                                    <th class="govuk-table__header" scope="col">Case name &#x2195;</th>
+                                    <th class="govuk-table__header" scope="col" style="width:110px;">Date sent &#x25BC;</th>
+                                    <th class="govuk-table__header" scope="col" style="width:110px;">Deadline &#x2195;</th>
                                 </tr>
                                 </thead>
                                 <tbody class="govuk-table__body">
